--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,112 @@
 
-# Created by https://www.gitignore.io/api/java,macos,eclipse
-# Edit at https://www.gitignore.io/?templates=java,macos,eclipse
+# Created by https://www.toptal.com/developers/gitignore/api/intellij,macos,java,linux,vim
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,macos,java,linux,vim
 
-### Eclipse ###
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# External tool builders
-.externalToolBuilders/
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# AWS User-specific
+.idea/**/aws.xml
 
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
+# Generated files
+.idea/**/contentModel.xml
 
-# CDT-specific (C/C++ Development Tooling)
-.cproject
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-# CDT- autotools
-.autotools
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-# Java annotation processor (APT)
-.factorypath
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-# PDT-specific (PHP Development Tools)
-.buildpath
+# CMake
+cmake-build-*/
 
-# sbteclipse plugin
-.target
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-# Tern plugin
-.tern-project
+# File-based project format
+*.iws
 
-# TeXlipse plugin
-.texlipse
+# IntelliJ
+out/
 
-# STS (Spring Tool Suite)
-.springBeans
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Code Recommenders
-.recommenders/
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Annotation Processing
-.apt_generated/
+# Cursive Clojure plugin
+.idea/replstate.xml
 
-# Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
-.scala_dependencies
-.worksheet
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-### Eclipse Patch ###
-# Eclipse Core
-.project
+# Editor-based Rest Client
+.idea/httpRequests
 
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
 
-# Annotation Processing
-.apt_generated
+### Intellij Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-.sts4-cache/
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
+
+# Sonarlint plugin
+# https://plugins.jetbrains.com/plugin/7973-sonarlint
+.idea/**/sonarlint/
+
+# SonarQube Plugin
+# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
+.idea/**/sonarIssues.xml
+
+# Markdown Navigator plugin
+# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
+.idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator-enh.xml
+.idea/**/markdown-navigator/
+
+# Cache file creation bug
+# See https://youtrack.jetbrains.com/issue/JBR-2257
+.idea/$CACHE_FILE$
+
+# CodeStream plugin
+# https://plugins.jetbrains.com/plugin/12206-codestream
+.idea/codestream.xml
 
 ### Java ###
 # Compiled class file
@@ -96,6 +133,21 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 ### macOS ###
 # General
 .DS_Store
@@ -104,6 +156,7 @@ hs_err_pid*
 
 # Icon must end with two \r
 Icon
+
 
 # Thumbnails
 ._*
@@ -124,4 +177,24 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# End of https://www.gitignore.io/api/java,macos,eclipse
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+
+# End of https://www.toptal.com/developers/gitignore/api/intellij,macos,java,linux,vim
